# merkle-vault

./: .gitignore  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yaml
.github/workflows/: api.yml  ci.yml  cli.yaml  e2e.yaml  mrl-lib.yml
rs-merkle-tree/: Cargo.toml  README.md
rs-merkle-tree/src/: lib.rs  merkle_proof.rs  merkle_tree.rs
rs-merkle-tree/src/utils/: crypto.rs
vault-api/: Cargo.toml  README.md
vault-api/src/: main.rs
vault-api/src/helpers/: fs.rs
vault-api/src/routes/: download.rs  mod.rs  upload.rs  vault.rs
vault-cli/: Cargo.toml  README.md
vault-cli/src/: lib.rs  main.rs
vault-cli/src/cmd/: add.rs  clear.rs  commit.rs  delete.rs  download.rs  list.rs  mod.rs  remove.rs  status.rs
vault-cli/src/config/: mod.rs
vault-cli/src/utils/: api.rs  fs.rs  mod.rs
vault-cli/src/vault/: fs.rs
vault-cli/tests/: e2e.sh
