[package]
name = "vault-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
uuid = { version = "1.4.1", features = ["v4"]}
rs-merkle-tree = { path= "../rs-merkle-tree/"}
