[package]
name = "vault-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-merkle-tree = { path= "../rs-merkle-tree/"}
clap = { version = "4.4.4", features = ["derive"] }
dialoguer = "0.10.4"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
indicatif = "0.17.7"
log = "0.4.20"
indicatif-log-bridge = "0.2.2"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
dirs = "5.0.1"
